added privacy policy

--- a/index.html
+++ b/index.html
@@ -2,13 +2,47 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Sample</title>
+    <title>Privacy Policy</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" />
+
+    <style type="text/css">
+      main {
+        padding: 16px;
+      }
+      p {
+        padding-top: 8px;
+        padding-bottom: 8px;
+      }
+    </style>
+    <script type="text/javascript" src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"/></script>
+
   </head>
 
-  <body>
+  <body class="mdc-typography">
     <main>
-      <h1>Sample</h1>
+      <h1 class="mdc-typography--headline4">Privacy Policy</h1>
+      <p class="mdc-typography--body2">
+        Protecting your privacy is important to us. We hope the following statement will help you understand how NUmero's products deals with the personal identifiable information ('PII') you may occasionally provide to us via Internet (the'Google Play'Platform).
+      </p>
+      <p class="mdc-typography--body2">
+        Generally, we do not collect any PII from you when you download our Android applications. To be specific, we do not require the consumers to get registered before downloading the application, nor do we keep track of the consumers' visits of our application, we even don't have a Server to store such PII.
+      </p>
+      <p class="mdc-typography--body2">
+        NUmero's products uses Admob as ads provider. For more information, please check links.<br />
+        ・<a href="https://www.google.com/policies/privacy/">Google Play Services</a><br />
+        ・<a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a><br />
+      </p>
+      <p class="mdc-typography--body2">
+        The only situation we may get access to your PII is when you personally decide to email us your feedback or to provide us with a bug report. The PII we may get from you in that situation are strictly limited to your name, email address and your survey response only.
+      </p>
+      <p class="mdc-typography--body2">
+        In above situation, we guarantee that your PII will only be used for contacting you and improving our services. We will never use such information (e.g. your name and email address) for any other purposes, such as to further market our products, or to disclose your personal information to a third party for commercial gains.
+      </p>
+      <p class="mdc-typography--body2">
+        It should be noted that whether or not to send us your feedback or bug report is a completely voluntary initiative upon your own decision. If you have concern about your PII being misused, or if you want further information about our privacy policy and what it means, please feel free to email us at <a href="mailto:numero.dev.and@gmail.com">numero.dev.and@gmail.com</a>, we will endeavor to provide clear answers to your questions in a timely manner.
+      </p>
     </main>
   </body>
-  
+
 </html>
